# atmospheric_correction

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  MANIFEST.in  README.md  pyproject.toml  setup.py
SIAC/: l8_angle.py
docs/source/: 01_Introduction.rst  02_Installation.rst  03_Quickstart.rst  04_Data_access_and_adaption_for_Landsat5.rst  05_Annex_technical.rst  conf.py  index.rst
zac/: __init__.py  atmo_solver.py  create_logger.py  create_training_set.py  downloaders.py  get_MCD43.py  l8_preprocessing.py  psf_optimize.py  s2_preprocessing.py  the_aerosol.py  the_correction.py  zac_l8.py  zac_s2.py
zac/l8/: __init__.py  angle.py  preprocessing.py
zac/tests/: test_s2.py
