[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "zac"
version = "2.3.0"
description = "Ziya Atmospheric Correction (ZAC)"
authors = ["Tang Ziya <tcztzy@gmail.com>", "Feng Yin <ucfafyi@ucl.ac.uk>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/tcztzy/zac"
keywords = ["Atmospheric Correction", "Landsat", "Sentinel", "MODIS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.8"
gdal = ">=2.4"
psutil = "*"
requests = "*"
scikit-image = "*"
scikit-learn = "*"
lightgbm = "^2.1"
numpy = "^1.13"
scipy = "^1"
numba = "*"
pyproj = "^2"

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"
rope = "*"
